# aws-config-utils

./: .gitignore  LICENSE  PUBLISHING.md  README.md  publish.py  pyproject.toml  requirements-dev.txt  setup.py
aws_config_utils/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
