[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aws_config_utils"]

[project]
name = "aws-config-utils"
version = "0.1.0"
description = "Utilities for working with AWS Config resource types"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/yourusername/aws-config-utils"
Repository = "https://github.com/yourusername/aws-config-utils"
Issues = "https://github.com/yourusername/aws-config-utils/issues"

[project.scripts]
aws-config-utils = "aws_config_utils.cli:main"
